--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -20,7 +20,7 @@
 
   <!-- Contact Form -->
   <div class="contact-form-panel">
-    <form>
+    <form action="/contact" method="post">
       <div class="form-group">
         <label for="firstName">First Name</label>
         <input type="text" id="firstName" name="firstName" required>
